--- a/sdf-portfolio/package.json
+++ b/sdf-portfolio/package.json
@@ -38,5 +38,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://sdfields.github.io/sdf-portfolio"
+  "homepage": "https://sdfields.github.io/sdf-portfolio",
+  "devDependencies": {
+    "tailwindcss": "^3.3.1"
+  }
 }
