edited homepage script to match site

--- a/sdf-portfolio/package.json
+++ b/sdf-portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sdfields.github.io/sdf-portfolio",
+  "homepage": "https://sdfields.github.io/SDF-Portfolio",
   "name": "sdf-portfolio",
   "version": "0.1.0",
   "private": true,
