--- a/sdf-portfolio/package.json
+++ b/sdf-portfolio/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://sdfields.github.io/SDF-Portfolio",
   "name": "sdf-portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
